fixed licenses and docs
